/**
 * Copyright 2006-2018. California Institute of Technology.
 * ALL RIGHTS RESERVED.
 * U.S. Government sponsorship acknowledged.
 *
 * This software is subject to U. S. export control laws and
 * regulations (22 C.F.R. 120-130 and 15 C.F.R. 730-774). To the
 * extent that the software is subject to U.S. export control laws
 * and regulations, the recipient has the responsibility to obtain
 * export licenses or other export authority as may be required
 * before exporting such information to foreign countries or
 * providing access to foreign nationals.
 */
  /**
 * AMPCS common protobuf schema for alarm statistics.
 *
 * Version: 1.0
 * ChangeLog:
 * V1.0 - New for R8
 */
 syntax = "proto3";

import "alarm_value.proto";

option optimize_for = SPEED;
option java_package = "jpl.gds.alarm.serialization";

message Proto3AlarmStatistics {
	int32 consecutiveNoAlarms = 1;
	int32 consecutiveRedAlarms = 2;
	int32 consecutiveYellowAlarms = 3;
	oneof currentValue { Proto3AlarmValue value = 4; }
}


/**
 * The Monitor data is keyed by station ID, so that would be integers.
 * Map<Int, Stats>
 */
message Proto3MonitorAlarmStatisticsStationMap {
	map<int32, Proto3AlarmStatistics> integerMap = 1;
}

/**
 * The Monitor data is keyed by station ID, so that would be integers.
 * Map<String, Map<Int, Stats>>
 */
message Proto3MonitorAlarmStatisticsMap {
	map<string, Proto3MonitorAlarmStatisticsStationMap> statsMap = 1;
}

message Proto3AlarmStatisticsMap {
	map<string, Proto3AlarmStatistics> statsMap = 1;
}